[package]
name = "vault"
version = "9.0.1"
edition = "2021"
authors = ["Ryan Taylor <2320507+ryantaylor@users.noreply.github.com>"]

description = "A parser for Company of Heroes replay files."
homepage = "https://github.com/ryantaylor/vault"
repository = "https://github.com/ryantaylor/vault"
readme = "README.md"
keywords = ["coh", "coh3", "company", "heroes", "replay"]
license = "MIT"

exclude = ["replays/*", "build-doc.sh", ".travis.yml", "CoH3Rec.bt"]

[dependencies]
byteorder = "1"
magnus = { version = "0.7", optional = true }
nom = "7"
nom_locate = "4"
nom-tracable = "0.9"
serde = { version = "1.0", features = ["derive"], optional = true }
uuid = "1"

[features]
missing = []
raw = []
regression = []
serde = ["dep:serde", "uuid/serde"]
trace = ["nom-tracable/trace"]
